cli/tests/ui/parse_missing_colon.stderr
Error: manifest::json5_error

  × check failed
  ╰─▶ json5 parse error: missing `:`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/parse_missing_colon.json5:2:20]
 1 │ {
 2 │   manifest_version "0.1.0",
   ·                    ┬
   ·                    ╰── missing `:`
 3 │   components: {
   ╰────
